Add instructions about Java9IntHash